test/org/midica/testfiles/failing/pattern-with-if.midica
INCLUDE inc/instruments.midica

0  c,d,e  pat_a( y )

PATTERN pat_a
	0 /1  if $[0] == x
END
